# TicTacToe

./: CMakeLists.txt  README  README.md  main.cpp  main.qml
core/: CMakeLists.txt  GameStatus.h  Human.h
core/board/inc/: Board.h  CellStatus.h
core/board/src/: Board.cpp
core/board/test/: Board.test.cpp
core/computer/inc/: Computer.h
core/computer/src/: Computer.cpp
core/computer/test/: Computer.test.cpp
core/human/inc/: Human.h
core/human/src/: Human.cpp
ui/: main.qml  qml.qrc
ui/components/: Board.qml  ButtonTicTac.qml  qmldir
